--- a/src/styles/messagesPanel.css
+++ b/src/styles/messagesPanel.css
@@ -1,4 +1,4 @@
-#messagePanel {
+.messagePanel {
     overflow-y: scroll;
     height: 100%;
     padding: 0px;
